<resources>
    <string name="app_name">Wickie</string>
    <string name="signin_header">Sign In</string>
    <string name="remember_switch">Remember Me</string>
    <string name="email_placeholder">abc@gmail.com</string>
    <string name="forgotpassword_text">Forgot Password?</string>
    <string name="spenddate_label">Spend Date</string>
    <string name="amount_label">Amount</string>
    <string name="balance_label">Balance</string>
    <string name="type_label">Type</string>
    <string name="reason_label">Reason</string>
    <string name="attachment_label">Attachment</string>
    <string name="request_button">Request</string>
    <string name="cancel_button">Cancel</string>
    <string name="fingerprint">FingerPrint</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="quote">“Happiness is when what you think, what you say, and what you do are in harmony.” “Where there is love there is life.”</string>

    <string-array name="types">
        <item>Phone</item>
        <item>Transport</item>
        <item>Food</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>